# MCP_Metrics

./: .env.example  .gitignore  PRD.md  README.md  TechnicalStack.md  setup.sh
.claude/: settings.json
.github/workflows/: ci.yml  daily_ingest.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: business.py  db.py  dora.py  insights.py  jobs.py  llm.py  main.py  mcp_client.py
api/github_mcp_productivity_engine_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: test_api_endpoints.py  test_dora.py  test_llm.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
infra/: docker-compose.yml
infra/db/: schema.sql
infra/env/: .env.example
infra/mcp/: Dockerfile  server.js
