[project]
name = "github-mcp-productivity-engine-api"
version = "0.1.0"
description = "FastAPI orchestrator for GitHub MCP Productivity Engine"
authors = [{ name = "Dev Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "openai>=1.55.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uvicorn]
factory = false
